package de.sven_torben.serialization_benchmark;

option java_package = "de.sven_torben.serialization_benchmark.testdata.protobuf";
option java_outer_classname = "CatalogProtos";

message Catalog {
	repeated CatalogItem item = 1;
}

message CatalogItem {
	required int32 id = 1;
	required string name = 2;
	required int32 quantityAvailable = 3;
	required double price = 4;
	required int64 inStockSince = 5;
}